# Finch-IOT

./: README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
main/clusters/: battery.c  battery.h  light.c  light.h  temperature.c  temperature.h
main/driver/: battery_adc.c  battery_adc.h  illuminance.c  illuminance.h  temp.c  temp.h
main/endpoints/: light.c  light.h  temperature.c  temperature.h
main/util/: zigbee.c  zigbee.h
